// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestedComponent is  DropdownItem matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "wrappers__DropdownItem-sc-1aeo08b-7",
        "isStatic": true,
        "rules": Array [
          "align-items:center;display:flex;height:",
          "1.5em",
          ";justify-content:center;margin:0;overflow:hidden;padding:0;text-align:center;text-decoration:none;text-overflow:ellipsis;text-transform:capitalize;white-space:nowrap;width:100%;",
        ],
      },
      "displayName": "wrappers__DropdownItem",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "wrappers__DropdownItem-sc-1aeo08b-7",
      "target": "li",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is  DropdownList matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "wrappers__DropdownList-sc-1aeo08b-6",
        "isStatic": true,
        "rules": Array [
          "background-color:white;border:solid 2px;border-top:0;box-shadow:4px 0 ",
          "#212529",
          ",0 -4px ",
          "#212529",
          ",-4px 0 ",
          "#212529",
          ",0 4px ",
          "#212529",
          ";list-style:none;margin:0 4px;max-height:calc(6 * ",
          "1.5em",
          ");overflow-y:hidden;padding:0;position:absolute;top:0;width:calc(100% - 12px);",
        ],
      },
      "displayName": "wrappers__DropdownList",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "wrappers__DropdownList-sc-1aeo08b-6",
      "target": "ul",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is  DropdownWrap matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "wrappers__DropdownWrap-sc-1aeo08b-5",
        "isStatic": true,
        "rules": Array [
          "position:relative;width:100%;z-index:1;",
        ],
      },
      "displayName": "wrappers__DropdownWrap",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "wrappers__DropdownWrap-sc-1aeo08b-5",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is  ErrorBox matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "wrappers__ErrorBox-sc-1aeo08b-0",
        "isStatic": true,
        "rules": Array [
          "background-color:",
          "rgba(231, 110, 85, 0.5)",
          ";box-shadow:4px 0 ",
          "#e76e55",
          ",0 -4px ",
          "#e76e55",
          ",-4px 0 ",
          "#e76e55",
          ",0 4px ",
          "#e76e55",
          ";display:block;margin:0.5em 0;overflow-x:auto;padding:0.5em;white-space:pre-wrap;",
        ],
      },
      "displayName": "wrappers__ErrorBox",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "wrappers__ErrorBox-sc-1aeo08b-0",
      "target": "pre",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is  ErrorCode matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "wrappers__ErrorCode-sc-1aeo08b-1",
        "isStatic": true,
        "rules": Array [
          "color:",
          "#ce372b",
          ";font-family:",
          "'Press Start 2P', monospace",
          ";font-size:0.65em;font-weight:bold;",
        ],
      },
      "displayName": "wrappers__ErrorCode",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "wrappers__ErrorCode-sc-1aeo08b-1",
      "target": "code",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is  FormLineWrap matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "wrappers__FormLineWrap-sc-1aeo08b-3",
        "isStatic": true,
        "rules": Array [
          "display:flex;width:100%;",
        ],
      },
      "displayName": "wrappers__FormLineWrap",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "wrappers__FormLineWrap-sc-1aeo08b-3",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is  PageWrapper matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "wrappers__PageWrapper-sc-1aeo08b-2",
        "isStatic": true,
        "rules": Array [
          "margin:auto;width:96vw;@media (min-width:",
          "768px",
          "){width:80vw;}",
        ],
      },
      "displayName": "wrappers__PageWrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "wrappers__PageWrapper-sc-1aeo08b-2",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is Input when status is status: {"status": "error"} matches snapshot 1`] = `
.c0 {
  border: none;
  box-shadow: 0 4px #e76e55,0 -4px #e76e55,4px 0 #e76e55,-4px 0 #e76e55;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: #ce372b;
  padding: 0.5rem 1rem;
  text-transform: capitalize;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1.5em;
    line-height: 1.5em;
  }
}

<wrappers__Input
  status="error"
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "wrappers__Input-sc-1aeo08b-4",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "border:none;box-shadow:0 4px ",
            [Function],
            ",0 -4px ",
            [Function],
            ",4px 0 ",
            [Function],
            ",-4px 0 ",
            [Function],
            ";font-family:",
            "'Press Start 2P', monospace",
            ";line-height:calc(2 * ",
            "1.5em",
            ");margin:4px;outline-color:",
            [Function],
            ";padding:0.5rem 1rem;text-transform:capitalize;width:100%;@media (min-width:",
            "768px",
            "){font-size:",
            "1.5em",
            ";line-height:",
            "1.5em",
            ";}",
          ],
        },
        "displayName": "wrappers__Input",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "wrappers__Input-sc-1aeo08b-4",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    status="error"
  >
    <input
      className="c0"
    />
  </StyledComponent>
</wrappers__Input>
`;

exports[`TestedComponent is Input when status is status: {"status": "success"} matches snapshot 1`] = `
.c0 {
  border: none;
  box-shadow: 0 4px #92cc41,0 -4px #92cc41,4px 0 #92cc41,-4px 0 #92cc41;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: #76c442;
  padding: 0.5rem 1rem;
  text-transform: capitalize;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1.5em;
    line-height: 1.5em;
  }
}

<wrappers__Input
  status="success"
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "wrappers__Input-sc-1aeo08b-4",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "border:none;box-shadow:0 4px ",
            [Function],
            ",0 -4px ",
            [Function],
            ",4px 0 ",
            [Function],
            ",-4px 0 ",
            [Function],
            ";font-family:",
            "'Press Start 2P', monospace",
            ";line-height:calc(2 * ",
            "1.5em",
            ");margin:4px;outline-color:",
            [Function],
            ";padding:0.5rem 1rem;text-transform:capitalize;width:100%;@media (min-width:",
            "768px",
            "){font-size:",
            "1.5em",
            ";line-height:",
            "1.5em",
            ";}",
          ],
        },
        "displayName": "wrappers__Input",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "wrappers__Input-sc-1aeo08b-4",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    status="success"
  >
    <input
      className="c0"
    />
  </StyledComponent>
</wrappers__Input>
`;

exports[`TestedComponent is Input when status is status: {"status": null} matches snapshot 1`] = `
.c0 {
  border: none;
  box-shadow: 0 4px #212529,0 -4px #212529,4px 0 #212529,-4px 0 #212529;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: "#e7e7e7";
  padding: 0.5rem 1rem;
  text-transform: capitalize;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1.5em;
    line-height: 1.5em;
  }
}

<wrappers__Input
  status={null}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "wrappers__Input-sc-1aeo08b-4",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "border:none;box-shadow:0 4px ",
            [Function],
            ",0 -4px ",
            [Function],
            ",4px 0 ",
            [Function],
            ",-4px 0 ",
            [Function],
            ";font-family:",
            "'Press Start 2P', monospace",
            ";line-height:calc(2 * ",
            "1.5em",
            ");margin:4px;outline-color:",
            [Function],
            ";padding:0.5rem 1rem;text-transform:capitalize;width:100%;@media (min-width:",
            "768px",
            "){font-size:",
            "1.5em",
            ";line-height:",
            "1.5em",
            ";}",
          ],
        },
        "displayName": "wrappers__Input",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "wrappers__Input-sc-1aeo08b-4",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    status={null}
  >
    <input
      className="c0"
    />
  </StyledComponent>
</wrappers__Input>
`;
